resolved horizontal overflow issue

--- a/src/scss/_partials/_components/_navmenu.scss
+++ b/src/scss/_partials/_components/_navmenu.scss
@@ -13,7 +13,6 @@
         font-size: 96px;
         padding-top: 92px;
         padding-right: 20px;    
-        margin-right: 10px;
         list-style-type: none;
         .NavItems {
             // font-size: clamp(1.5rem, -0.8936rem + 7.6596vw, 6rem);
